--- a/tutorials/custom_dataset.ipynb
+++ b/tutorials/custom_dataset.ipynb
@@ -1329,7 +1329,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "relbench",
    "language": "python",
    "name": "python3"
   },
@@ -1343,7 +1343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
